1.增加esp8266通过Xmodem协议发送固件数据的功能 2.增加stm32接收esp8266发送的固件数据并下载到外部FLASH更新A区的功能

--- a/bootloader_ota(B)/.vscode/settings.json
+++ b/bootloader_ota(B)/.vscode/settings.json
@@ -11,6 +11,8 @@
         "oled.h": "c",
         "key.h": "c",
         "led.h": "c",
-        "bootloader.h": "c"
+        "bootloader.h": "c",
+        "main.h": "c",
+        "stm32f10x_it.h": "c"
     }
 }
