--- a/bootloader_ota(B)/.vscode/settings.json
+++ b/bootloader_ota(B)/.vscode/settings.json
@@ -13,6 +13,9 @@
         "led.h": "c",
         "bootloader.h": "c",
         "main.h": "c",
-        "stm32f10x_it.h": "c"
+        "stm32f10x_it.h": "c",
+        "usart3.h": "c",
+        "flash.h": "c",
+        "at24c256.h": "c"
     }
 }
